# update-prek-additional-dependencies

./: .pre-commit-config.yaml  Justfile  README.md  pyproject.toml  update_prek_additional_dependencies.py
.github/workflows/: clean-caches.yml  code-checks.yml  pull-request-tasks.yml  sync-labels.yml
docs/: SECURITY.md
project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
