[project]
name = "project"
dynamic = ["version"]
requires-python = "~=3.14.0"
dependencies = ["ruff==0.15.1", "ty==0.0.17"]

[tool.uv]
required-version = "~=0.10.0"
package = false

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "D100",    # Ignore missing docstring in public module
  "T201",    # Ignore print statement (until we have a logger)
  "S101",    # Ignore asserts
  "F811",    # Ignore redefinition of function
  "G004",    # Ignore logging format string
]

fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"
